[safe-browsing] Make the perftest less allocate-y

This CL makes the V4 Store perftest a bit faster by:
1. Using a smaller # of hashes in debug builds
2. Using one big string instead of a vector of full hashes, to avoid
   allocating and de-allocating many small strings. To get this working,
   needed to slightly modify V4Store to allow querying by StringPiece.

(2) improved local performance on my release build by 25-30%

Bug: 822624
Change-Id: I646af2b0ccfb6447ccbb94ce68b661bd235587d1
Reviewed-on: https://chromium-review.googlesource.com/965931
Commit-Queue: Charlie Harrison <csharrison@chromium.org>
Reviewed-by: Varun Khaneja <vakh@chromium.org>
Cr-Commit-Position: refs/heads/master@{#543796}
Former-commit-id: d4032b171ce2c4de0b2c2fdfbecdc9649708d08b